# hfc

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  main.go
client/: Makefile  interface.c
docker/: base.Dockerfile  libpng.Dockerfile
internal/analysis/: calltree.go  dynamic.go  static.go
internal/webcore/: handler.go  server.go
script/: BuildTest.sh  ReportCorpusExample.sh  report_corpus_example.sh
src/: Main.cpp
src/icfg/: Icfg.cpp  Icfg.hpp
src/icfg/lib/: DotGraph.h  DotNode.h  DotParser.h  DotWriter.h  README.md
src/icfg/lib/hlx/: README.md
src/icfg/lib/hlx/include/: ByteStream.h  Bytes.h  StringHelpers.h
src/pfuzzer/: .gitignore  FuzzerDefs.h  FuzzerDriver.cpp  FuzzerFlags.def  FuzzerFork.cpp  FuzzerFork.h  FuzzerLoop.cpp  FuzzerTracePC.cpp  FuzzerTracePC.h
src/webcore/: Handler.cpp  Handler.hpp  Server.cpp  Server.hpp
test/: .gitignore  Makefile  main.c
